// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Ratings component should render 4.3 of 5 highlight icons 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings--background"
  >
    <Icon(HighlightIcon)
      color="grey"
      key="0"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="1"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="2"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="3"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="4"
    />
  </div>
  <div
    className="ratings--foreground"
    style={
      Object {
        "width": "86%",
      }
    }
  >
    <Icon(HighlightIcon)
      color="orange"
      key="0"
    />
    <Icon(HighlightIcon)
      color="orange"
      key="1"
    />
    <Icon(HighlightIcon)
      color="orange"
      key="2"
    />
    <Icon(HighlightIcon)
      color="orange"
      key="3"
    />
    <Icon(HighlightIcon)
      color="orange"
      key="4"
    />
  </div>
</div>
`;

exports[`The Ratings component should render a third of 10 approved icons 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings--background"
  >
    <Icon(ApprovedIcon)
      color="grey"
      key="0"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="1"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="2"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="3"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="4"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="5"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="6"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="7"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="8"
    />
    <Icon(ApprovedIcon)
      color="grey"
      key="9"
    />
  </div>
  <div
    className="ratings--foreground"
    style={
      Object {
        "width": "33.333333333333336%",
      }
    }
  >
    <Icon(ApprovedIcon)
      color="orange"
      key="0"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="1"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="2"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="3"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="4"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="5"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="6"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="7"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="8"
    />
    <Icon(ApprovedIcon)
      color="orange"
      key="9"
    />
  </div>
</div>
`;

exports[`The Ratings component should render only background if the rating is null 1`] = `
<div
  className="ratings"
>
  <div
    className="ratings--background"
  >
    <Icon(HighlightIcon)
      color="grey"
      key="0"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="1"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="2"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="3"
    />
    <Icon(HighlightIcon)
      color="grey"
      key="4"
    />
  </div>
</div>
`;
